# ow-tracker

./: .editorconfig  .env.example  .gitattributes  .gitignore  .justfile  Cargo.toml  README.md  flake.nix  ow-tracker.sublime-project
.github/workflows/: check.yaml  pages.yaml
crates/common/: Cargo.toml
crates/common/src/: lib.rs  logger.rs  saves.rs  server_models.rs
crates/companion-app/: Cargo.toml  build.rs
crates/companion-app/src/: config.rs  game.rs  log.rs  main.rs  request.rs  saves.rs
crates/server/: Cargo.toml  build.rs
crates/server/src/: lib.rs  main.rs  response.rs  store.rs
crates/tr-extractor/: Cargo.toml  README.md
crates/tr-extractor/src/: args.rs  info.rs  main.rs  models.rs
crates/tr-extractor/src/models/: entries.rs  mod.rs  translations.rs
frontend/: .gitignore  .prettierignore  .prettierrc.yaml  index.html  jsconfig.json  package.json  vite.config.js
frontend/public/: coordinates.json  entries.json  parents.json  save_keys.json  theme.json
frontend/public/translations/: chinese_simple.json  english.json  french.json  german.json  italian.json  japanese.json  korean.json  polish.json  portuguese_br.json  russian.json  spanish_la.json  turkish.json
frontend/public/translations/ui/: english.ftl  russian.ftl
frontend/scripts/: README.md  convert_coordinates.py  extract_save_keys.py  load_parents.py  remove_unused_sprites.py
frontend/src/: App.svelte  Leaflet.svelte  Map.svelte  app.css  app.scss  main.js  vite-env.d.ts
frontend/src/components/: Debug.svelte  FactsPanel.svelte  Loading.svelte  MapArrow.svelte  MapCard.svelte  Popup.svelte  ServerErrorPopup.svelte  ShiplogCategories.svelte  Sidebar.svelte  WelcomePopup.svelte
frontend/src/components/atoms/: ConsiderIgnored.svelte  FileUpload.svelte  HideDlc.svelte  HideSpoilers.svelte  ShowUnexplored.svelte  SidebarApply.svelte
frontend/src/lib/: Map.svelte  arrow.js  card.js  categories.js  data.js  dataurl.js  draw.js  i18n.js  index.d.ts  info.js  language.js  leaflet.js  saves.js  stores.js  utils.js  watch.js
