[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.97"
bon = "3.5.1"
clap = "4.5.35"
derive_builder = "0.20.2"
dirs = "6.0.0"
memmap2 = "0.9.5"
serde = { version = "1.0.219", features = ["derive"] }
serde-xml-rs = "0.7.0"
serde_json = "1.0.140"
similar-asserts = "1.7.0"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
