[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.97"
async-broadcast = "0.7.2"
axum = { version = "0.8.4", features = ["macros"] }
bon = "3.5.1"
chrono = { version = "0.4.41", features = ["serde", "now"] }
clap = { version = "4.5", features = ["derive"] }
derive_builder = "0.20.2"
directories = "6.0.0"
dirs = "6.0.0"
dotenvy_macro = "0.15.7"
futures-util = "0.3.31"
heck = "0.5.0"
iced = "0.13.1"
iced_futures = "0.13.2"
memmap2 = "0.9.5"
notify = "8.2.0"
redb = "2.6.2"
reqwest = { version = "0.12.22", default-features = false, features = ["json", "rustls-tls", "blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-xml-rs = "0.7.0"
serde_json = "1.0.140"
similar-asserts = "1.7.0"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors", "trace", "limit"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.17.0", features = ["serde", "v4"] }

common = { path = "crates/common", package = "ow-tracker-common" }
server = { path = "crates/server", package = "ow-tracker-server" }

[[workspace.target.'cfg(windows)'.dependencies]]
# todo: fix "no-provider"
reqwest = { version = "0.12.22", default-features = false, features = ["json", "rustls-tls-no-provider", "blocking"] }

[profile.dev.package."iced"]
inherits = "release"
