[package]
name = "ow-tracker-companion"
version.workspace = true
edition.workspace = true

[[bin]]
path = "src/main.rs"
name = "ow-companion"

[dependencies]
directories.workspace = true
dotenvy_macro.workspace = true
iced.workspace = true
notify.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

common.workspace = true

[target.'cfg(windows)'.dependencies]
# todo: fix "no-provider"
reqwest = { version = "0.12.22", default-features = false, features = ["json", "rustls-tls-no-provider", "blocking"] }

[target.'cfg(not(windows))'.dependencies]
reqwest.workspace = true
