[package]
name = "ow-tracker-companion"
version.workspace = true
edition.workspace = true

[[bin]]
path = "src/main.rs"
name = "ow-companion"

[features]
default = []
# enable windows_subsystem = "windows" on windows
windows_console = []

[dependencies]
directories.workspace = true
dotenvy_macro.workspace = true
iced.workspace = true
notify.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

common.workspace = true

[target.'cfg(windows)'.dependencies]
reqwest = { workspace = true, features = ["default-tls", "native-tls"] }

[target.'cfg(not(windows))'.dependencies]
reqwest = { workspace = true, features = ["rustls-tls"] }
