[package]
name = "ow-tracker-server"
description = "Server for storing saves for ow-tracker"
version.workspace = true
edition.workspace = true

[[bin]]
path = "src/main.rs"
name = "ow-server"

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
dotenvy_macro.workspace = true
redb.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

common.workspace = true
